Employee Api Jwt ile koruma altına alındı.

--- a/Services/ManageTaskAssignment.Employee.Api/appsettings.json
+++ b/Services/ManageTaskAssignment.Employee.Api/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "IdentityServerURL": "https://localhost:5001",
   "ConnectionStrings": {
     "PostgreSql": "User ID=admin; Password=Password12*; Server=localhost; Port=5432; Database=EmployeeDb; Integrated Security=true; Pooling=true"
   },
