Task.Api added Jwt Authentication

--- a/Services/ManageTaskAssignment.Task.Api/appsettings.json
+++ b/Services/ManageTaskAssignment.Task.Api/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "IdentityServerURL": "https://localhost:5001",
   "MongoDbSettings": {
     "TaskCollectionName": "Tasks",
     "ConnectionString": "mongodb://localhost:27017",
