To be continues.
I will add GetWorkOrderItemByEmployeeId
I have to get employeeId by token

--- a/Services/ManageTaskAssignment.Assignment.Api/appsettings.json
+++ b/Services/ManageTaskAssignment.Assignment.Api/appsettings.json
@@ -1,5 +1,8 @@
 {
   "IdentityServerURL": "https://localhost:5001",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=WorkOrderDb;User=sa;Password=Password12*"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
